--- a/assessment.html
+++ b/assessment.html
@@ -5,7 +5,7 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>あなたのユーザ名が作ったあなたのいいところ診断</title>
   </head>
-    <title>あなたのいいところ診断</title>
+    <title>あなたのいいところを診断します</title>
   </head>
   <body>
     <h1>あなたのいいところは?</h1>
